--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de contas </title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="desafio1.js"></script>
 </head>
 
 <body>
@@ -14,13 +15,12 @@
 
     <section class="container">
         <header>
+            <h1><img class="logo" src="grafico.png" height="250px" ; alt="Logo do grafico"> </h1>
             <fieldset class="caixa">
                 <nav>
-                    <ul>
+                    <ul class="navegação">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="desafio1.js">Cadastro do Cliente</a></li>
-
-
+                        <li>
                     </ul>
                 </nav>
             </fieldset>
@@ -28,32 +28,34 @@
     </section>
 
     <main>
-        <section class="principal">
-            <h2 class="titulo-principal">Misis Invest</h2>
+        <section class="principal ">
+            <h2 class="titulo-principal ">Misis Invest</h2>
+            <img class="dimdim " src="dimdim.jpg ">
 
-            <p class="missão"> Entramos em um treinamento da empresa Nitech, neste treinamento foram disponibilizados 3 sistemas para montarsmo. Isis escolheu um sistema de conta bancaria começou com aplicação em linguagem JavaScript, a parte de backend. O treinamento da
-                Nitech deu continuidade, os treinadores da Nitech nos informou que poderiamos trocar nossas duplas, foi então onde eu (Mariana) escolhi a Isis, e em uma das reuniões fomos informada que teriamos que fazer modificações no nosso código.
-                Resolver colocar um frontend no nosso sistema, e assim começamos a nossa pequena mudança.
+            <p class="missão "> Em Março de 2022 entramos em um treinamento da empresa Nitech, neste treinamento foram disponibilizados 3 sistemas para realizarmos. Isis coma sua primeira dupla escolheram um sistema de conta bancaria, começaram com aplicação em linguagem
+                Portugol e depois passaram para JavaScript na parte de backend. O treinamento da Nitech deu continuidade e na segunda semana de Abril de 2022, os treinadores da Nitech realizaram uma reunião e informaram que poderiamos trocar nossas duplas,
+                foi então onde eu (Mariana) escolhi a Isis, e em uma das reuniões para explicar os próximos passos fomos informada que teriamos que fazer modificações no nosso código. Então juntas entramos em acordo e resolvemos colocar um frontend no
+                nosso sistema, e assim começamos a nossa pequena mudança.
 
         </section>
 
-        <section class="Desafios">
+        <section class="Desafios ">
 
-            <h3 class="titulo-principal">O que você irá encontrar aqui</h3>
-            <div class="portifolio-conteudo">
-                <ul class="lista-desafios">
-                    <li class="itens">Cadastros de clientes </li>
-                    <li class="itens"> Investimentos </li>
-                    <li class="itens"> Rendimentos </li>
-                    <li class="itens">Juros </li>
+            <h3 class="titulo-principal ">O que você irá encontrar aqui</h3>
+            <div class="portifolio-conteudo ">
+                <ul class="lista-desafios ">
+                    <li class="itens ">Cadastros de clientes </li>
+                    <li class="itens "> Investimentos </li>
+                    <li class="itens "> Rendimentos </li>
+                    <li class="itens ">Juros </li>
                 </ul>
             </div>
         </section>
     </main>
 
     <footer>
-        <img src="" height="50px">
-        <p class="copyright"> &copy; Copyright Desafio Isis&Mariana
+        <img src=" " height="50px ">
+        <p class="copyright "> &copy; Copyright Desafio Isis&Mariana
     </footer>
 </body>
 
