Incluindo arquivo JS para ser executado a partir do botão Cadastro de Clientes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul class="navegação">
                         <li><a href="index.html">Home</a></li>
-                        <li>
+                        <li><button class="bt" onclick="myfunction()">Cadastro do Cliente</button></li>
                     </ul>
                 </nav>
             </fieldset>
